# PineOpt

./: .env.example  .env.production  .gitignore  Dockerfile.backend  Dockerfile.frontend  EPIC_7_COMPLETION_REPORT.md  EPIC_8_COMPONENT_REFACTORING_GUIDE.md  EPIC_8_IMPLEMENTATION_GUIDE.md  EPIC_8_UX_ENHANCEMENT.md  Epic2_Collection_Matrix.md  Epic3_Historical_Depth_Strategy.md  PROJECT_STATE.md  README.md  REPOSITORY_CLEANUP_ACTION_PLAN.md  SPRINT1_DEVELOPMENT_READY.md  UXPLAN.md  docker-compose.yml  epic7_sprint1_validation.js  git_status_backup.txt  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_enhanced.txt  test_api_endpoints.py  test_epic7_frontend.js  test_frontend_api_connections.py  test_hye_simple.py  vite.config.ts
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
Documentations/: Build_Plan_TradingView_Data_Integration.md
Resources/: Asset OHLC 12H (1).xlsx
api/: ai_conversion_routes.py  backtest_routes.py  enhanced_data_routes.py  futures_routes.py  intelligent_conversion_routes.py  market_data_service.py  market_routes.py  server.py  strategies.db  strategy_routes.py
backend/: SPRINT_2_COMPLETION_REPORT.md  SPRINT_3_TASK_1_VALIDATION.md  SPRINT_3_TASK_2_VALIDATION.md  SPRINT_3_TASK_3_VALIDATION.md
database/: data_access.py  init_database.py  init_strategy_db.py  models.py  schema.sql  strategy_models.py  unified_schema.sql
documentation/: ARCHITECTURE_PLAN_v1.0.md  Epic6_Architecture_Design.md  Epic6_Sprint_Plans.md  PRD_Comprehensive_Strategy_Analysis_Engine.md  PRD_Epic5_Strategy_Execution_Backtesting.md  PRD_Epic6_Advanced_Pine_Conversion.md  PROJECT_STATE.md
generated_strategies/: simple_rsi_strategy.py
scripts/: run-tests.sh  start-dev.sh
src/: App.tsx
tests/: test_codegen.py  test_epic_0_validation.py  test_parser.py
(+172 files in other folders)
